Fix unequal avatar spacing: display block removes inline descender gap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -568,6 +568,7 @@ body {
 }
 
 .avatar-thumbnail {
+  display: block;
   width: 50px;
   height: 50px;
   border-radius: 50%;
